Работа с названиями артефактов

--- a/MEMOO/MEMOO/Resourses/Artefacts.strings
+++ b/MEMOO/MEMOO/Resourses/Artefacts.strings
@@ -1,37 +1,56 @@
 /* 
- Победитель - Hānimeni
- Счастливчик - Kau LUA
- Первый - ka mua
- Снайпер - Lihuсhuala
- Умный - akamai
- Семь - bakwai
- Пять - biyar
- Пятнадцать - umikumālima
+
+ за выполнение заданий
+
+
+
+Best - Oi-loa - Пройден раунд без ошибок
+Winner - Lanakila - Пройден раунд с 3 ошибками
+Lucky - Laki - Пройден раунд с 7 ошибками
+First - Ka-mua - Пройден первый раунд
+Spy - Lihuсhuala - Сыграно за день 50 раундов
+Clewer - Akamai - Сыграно за день 100 раундов
+Three rounds - Ekolu - Пройдено 3 раунда подряд
+Five rounds - Elima - Пройдено 5 раундов подряд
+Seven rounds - Ehiku - Пройдено 7 раундов подряд
+Ten rounds - Umi - Пройдено 10 раундов подряд
+Quick - Wiki-wiki - Пройден раунд менее чем за 15 секунд
+
+Attentive - Ho-olohe - Сыграно 100 раундов
+No bad - Aole ino - Сыграно 200 раундов
+Persistent - Ho-omau - Сыграно 300 раундов
+Zeal - Ho-oikaika - Сыграно 500 раундов
+Zookeeper - Kiai holoholona - Пройдены все уровни с животными
 
 
 
 
 
 
- Фрукты - nā huaʻai
- Флаг - tuta
- Ферма - Huakai
- Животные - Dabbobi
- Alfred -
- Крокодил - Kada
- Узор - Kaukua
- Ниньзя - Kokua Papa
- Спорт - wasanni
- Лето - Bazara
- Дети - Nā keiki
- Собаки - Kare
- Игрушки - Mea pāʻani
- Овощи - Mea kanu
- Космос - hakahaka
- Буквы - Nā Kūlana
- Оригами - Hana
- Милота - minoʻaka
- Цветы - Nā pua
- Животные - holoholona
+
+
+ за прохождение раунда
+
+Fruit - Hua
+Flag - Tuta
+Farm - Huakai
+Animals - Dabbobi
+Alfred - Nele
+Crocodile - Kada
+Pattern - Kaukua
+Soldier - Koa
+Sport - Hauki
+Summer - Kauwela
+Child - Keiki
+Dog - Ilio
+Toys - Mea-paani
+Vegetables - Mea-kanu
+Star - Hoku
+Letter - Palapala
+Craft - Hana-lima
+Cut - Olu-Olu
+Flower - Pua
+Animal - Holoholona
+
+
 */
-
